Don't emit extra AtkWindow::activate events during element focus

We were unconditionally emitting these events for explicit focus
changes, which isn't something that we want to do. Instead only emit
them when the window is actually different.

Bug: 909003
Change-Id: I9c6e3c9db4cd6dc5055a4b7b28cc98cc92ae0a5c
Reviewed-on: https://chromium-review.googlesource.com/c/1397988
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Commit-Queue: Martin Robinson <mrobinson@igalia.com>
Cr-Commit-Position: refs/heads/master@{#620681}
Former-commit-id: 6bf8cb2995fedb53e77ad9be9b1ededfb45b55a0